// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-ul> Component basic usage with attributes 1`] = `
<bolt-ul data-attr="some attribute"
         onclick="location.href=&#039;https://pega.com&#039;"
>
  <replace-with-grandchildren>
    <div data-attr="some attribute"
         onclick="location.href=&#039;https://pega.com&#039;"
         class="c-bolt-ul"
         role="list"
    >
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Do not include any data or information in your posts that are confidential!
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Apply basic practices for collaborative work.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Be honest, respectful, trustworthy and helpful.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item c-bolt-li--last-item"
               role="listitem"
          >
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
    </div>
  </replace-with-grandchildren>
</bolt-ul>
`;

exports[`<bolt-ul> Component with nested <bolt-ol> list compiles 1`] = `
<bolt-ul>
  <replace-with-grandchildren>
    <div class="c-bolt-ul"
         role="list"
    >
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Do not include any data or information in your posts that are confidential!
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Apply basic practices for collaborative work.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Be honest, respectful, trustworthy and helpful.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Answer questions authoritatively and concisely.
            <bolt-ol>
              <replace-with-grandchildren>
                <div class="c-bolt-ol"
                     role="list"
                >
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ol-item "
                           role="listitem"
                      >
                        Item 1
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ol-item "
                           role="listitem"
                      >
                        Item 2
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ol-item "
                           role="listitem"
                      >
                        Item 3
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ol-item c-bolt-li--last-item"
                           role="listitem"
                      >
                        Item 4
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                </div>
              </replace-with-grandchildren>
            </bolt-ol>
          </div>
        </replace-with-grandchildren>
      </bolt-li>
    </div>
  </replace-with-grandchildren>
</bolt-ul>
`;

exports[`<bolt-ul> Component with nested <bolt-ul> list compiles 1`] = `
<bolt-ul>
  <replace-with-grandchildren>
    <div class="c-bolt-ul"
         role="list"
    >
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Do not include any data or information in your posts that are confidential!
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Apply basic practices for collaborative work.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Be honest, respectful, trustworthy and helpful.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </div>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li role="presentation">
        <replace-with-grandchildren role="presentation">
          <div class="c-bolt-li c-bolt-li--ul-item "
               role="listitem"
          >
            Answer questions authoritatively and concisely.
            <bolt-ul>
              <replace-with-grandchildren>
                <div class="c-bolt-ul"
                     role="list"
                >
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ul-item "
                           role="listitem"
                      >
                        Item 1
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ul-item "
                           role="listitem"
                      >
                        Item 2
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ul-item "
                           role="listitem"
                      >
                        Item 3
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li role="presentation">
                    <replace-with-grandchildren role="presentation">
                      <div class="c-bolt-li c-bolt-li--ul-item c-bolt-li--last-item"
                           role="listitem"
                      >
                        Item 4
                      </div>
                    </replace-with-grandchildren>
                  </bolt-li>
                </div>
              </replace-with-grandchildren>
            </bolt-ul>
          </div>
        </replace-with-grandchildren>
      </bolt-li>
    </div>
  </replace-with-grandchildren>
</bolt-ul>
`;
